Here are the changes from version 20070826 to version YYYYMMDD.

* 2008-05-17
   - Fixed bug in Windows code to page the heap to disk when unable to
     grow the heap to a desired size.  
     Thanks to Sami Evangelista for the bug report.

* 2008-04-20
   - Fixed bug in *NIX code to page the heap to disk when unable to
     grow the heap to a desired size.
     Thanks to Nicolas Bertolotti for the bug report and patch.

* 2008-04-07
   - More flexible active/paused stack resizing policy.
     Removed thread-shrink-ratio runtime option.
     Added stack-current-grow-ratio, stack-current-max-reserved-ratio,
     stack-current-permit-ratio, stack-current-shrink-ratio,
     stack-max-reserved-ratio, and stack-shrink-ratio runtime options.

* 2008-04-07
   - Fixed bugs in Basis Library where the representations of 
     OS.IO.iodesc, Posix.IO.file_desc, Posix.Signal.signal,
     Socket.sock, Socket.SOGK.sock_type as integers were exposed.

* 2008-03-02
   - Fixed bug in Basis Library where the representation of 
     OS.Process.status as an integer was exposed.

* 2008-02-13
   - Fixed space-safety bug in pass to flatten refs into containing
     data structure. Thanks to Daniel Spoonhower for the bug report
     and initial diagnosis and patch.

* 2008-01-21
   - Fixed frontend to accept "op longvid" patterns and expressions.
     Thanks to Florian Weimer for the bug report.

* 2008-01-17
   - Extended -show-def-use output to include types of variable
     definitions.

* 2007-12-18
   - Changed ML-Yacc and ML-Lex to output line directives so that
     MLton's def-use information points to the source files (.grm
     and .lex) instead of the generated implementations (.grm.sml
     and .lex.sml).

* 2007-12-14
   - Added runtime option 'may-page-heap {false|true}'.  By default,
     MLton will not page the heap to disk when unable to grow the heap
     to a desired size.  (Previously, this behavior was the default,