@@ -8,7 +8,7 @@
 #ifndef _BYTECODE_MAIN_H_
 #define _BYTECODE_MAIN_H_
 
-#include "main.h"
+#include "common-main.h"
 #include "interpret.h"
 
 #ifndef DEBUG_CODEGEN
@@ -21,7 +21,7 @@ static GC_frameIndex returnAddressToFrameIndex (GC_returnAddress ra) {
         return *((GC_frameIndex*)(MLton_bytecode.code + ra - sizeof(GC_frameIndex)));
 }
 
-#define Main(al, mg, mfs, mmc, pk, ps, ml)                              \
+#define MLtonMain(al, mg, mfs, mmc, pk, ps, ml)                         \
 void MLton_callFromC () {                                               \
         uintptr_t nextFun;                                              \
         GC_state s;                                                     \
@@ -46,7 +46,7 @@ void MLton_callFromC () {                                               \
         if (DEBUG_CODEGEN)                                              \
                 fprintf (stderr, "MLton_callFromC done\n");             \
 }                                                                       \
-int main (int argc, char **argv) {                                      \
+int MLton_main (int argc, char* argv[]) {                               \
         uintptr_t nextFun;                                              \
         Initialize (al, mg, mfs, mmc, pk, ps);                          \
         if (gcState.amOriginal) {                                       \
